# code2test

./: .env.example  .gitignore  README.md  knowledge_graph.json  llm_cache.json  main.py  offline_flow.py  online_flow.py  pyproject.toml  reqirements.txt
code2test/: __init__.py  __main__.py
code2test/adapters/: __init__.py
code2test/adapters/java/: __init__.py  junit_adapter.py
code2test/adapters/javascript/: __init__.py  jest_adapter.py
code2test/adapters/python/: __init__.py  pytest_adapter.py
code2test/agents/: __init__.py  diagnosis_agent.py  intent_agent.py  test_agent.py
code2test/cli/: config_manager.py  display.py  git_manager.py  html_generator.py  interactive.py  main.py
code2test/cli/adapters/: doc_generator.py
code2test/cli/commands/: config.py  generate.py  init.py  intent.py  report.py  test.py  verify.py
code2test/cli/models/: config.py
code2test/cli/utils/: api_errors.py  fs.py  repo_validator.py  validation.py
code2test/core/: __init__.py  assertions.py  generator.py  intent.py  models.py  templates.py  verifier.py
code2test/core/intent_analyzers/: __init__.py  base_analyzer.py  java_analyzer.py  javascript_analyzer.py  python_analyzer.py
code2test/reporting/: __init__.py  html_report.py  json_report.py
code2test/src/be/: agent_orchestrator.py  cluster_modules.py  documentation_generator.py  llm_services.py  main.py  prompt_template.py
code2test/src/be/agent_tools/: deps.py  generate_sub_module_documentations.py  read_code_components.py
code2test/src/be/dependency_analyzer/: __init__.py  ast_parser.py  dependency_graphs_builder.py  topo_sort.py
code2test/src/be/dependency_analyzer/analysis/: analysis_service.py  call_graph_analyzer.py  repo_analyzer.py
code2test/src/be/dependency_analyzer/analyzers/: c.py  cpp.py  csharp.py  java.py  javascript.py  php.py  python.py  typescript.py
code2test/src/be/dependency_analyzer/models/: analysis.py
code2test/src/be/dependency_analyzer/utils/: logging_config.py
code2test/src/fe/: background_worker.py  cache_manager.py  routes.py  visualise_docs.py
code2test/storage/: __init__.py  intent_db.py  test_registry.py
code2test/templates/java/junit/: test_file.j2
code2test/templates/javascript/jest/: mock.j2  test_file.j2
code2test/templates/python/pytest/: fixture.j2  test_file.j2
docs/: architecture.md  proposal.md  quickstart.md  task.md
docs/arch/: arch.md  arch_v2.md  arch_v3.md  arch_v4.5.md  arch_v4.md  arch_v5_final.md  arch_v6.md  final_arch.md
docs/plan/: arch_claude.md  final_arch.md  v1.md
examples/ci/: github_actions.yml  gitlab_ci.yml
game_test/: game.py
nodes/: __init__.py  analysis_nodes.py  generation_nodes.py  verification_nodes.py
plan/: checklist.md  updates.md
tests/: test_heal_and_human.py  test_learn_and_finalize.py  test_router_and_gate.py
utils/: async_call_llm.py  call_llm.py  code_utils.py  knowledge_graph.py  sandbox_executor.py
